@@ -1,3 +1,8 @@
+2006-01-25  Andreas Tobler  <a.tobler@schweiz.ch>
+
+	* Makefile.am (asm_libgcjgc_sources): Rename to asm_libgcjgc_sources.
+	* Makefile.in: Regenerate.
+
 2006-01-25  Bryce McKinlay  <mckinlay@redhat.com>
 
 	* include/private/gcconfig.h: Revert to GC 6.6 version, removing
